<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aahackathon.com.aahackathon.HomeScreen.MainActivity">

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="48dp"
        android:text="@string/home_second_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/message1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_home"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />




    <LinearLayout
        android:id="@+id/edittextscrollview"
        android:layout_width="368dp"
        android:layout_height="139dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="184dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView4"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:text="from" />

                <EditText
                    android:id="@+id/dateview1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="date"
                    android:text="@string/date"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView3"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:text="to" />

                <EditText
                    android:id="@+id/dateview2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="date"
                    android:text="@string/date"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView5"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:text="final" />

                <EditText
                    android:id="@+id/dateview3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="date"
                    android:text="@string/date"/>
            </LinearLayout>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="332dp"
        android:text="@string/home_button_add_fields"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editText2"
        android:layout_width="53dp"
        android:layout_height="21dp"
        android:layout_marginLeft="164dp"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/home_third_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="392dp"
        android:text="@string/home_button_Plan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="78dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView1"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:text="from" />

            <EditText
                android:id="@+id/dateview4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="date"
                android:text="@string/date"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="177dp"
                android:layout_height="match_parent"
                android:text="to" />

            <EditText
                android:id="@+id/dateview5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="date"
                android:text="@string/date"/>

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
